GNOME Bugzilla – Bug 745177
aisleriot card theme broken
Last modified: 2015-02-26 22:13:55 UTC
A recent change in librsvg breaks the rendering of this [https://git.gnome.org/browse/aisleriot/tree/cards/swiss-xvii.svg] aisleriot card theme rather catastrophically: Bisecting... 0c98142e31cdc91963860f99ec933e52f3cc63c6 is the first bad commit commit 0c98142e31cdc91963860f99ec933e52f3cc63c6 Author: Federico Mena Quintero <federico@gnome.org> Date: Fri Feb 20 12:55:36 2015 -0600 RsvgPathBuilder: don't add a terminating moveto after closepath When we used libart, before Cairo, it was necessary to add a moveto after a closepath, since the starting and ending points of a closed path were supposed to coincide. Cairo handles closed paths without needing the caller to manually move back to the starting point. Signed-off-by: Federico Mena Quintero <federico@gnome.org>
Thanks for bisecting this; I pushed the revert in commit 310500cf1739f8e827331d822bd9f9f08f6fc2b0. With the revert, the image renders fine. Sigh, I need to fix the test suite :)
*** Bug 745097 has been marked as a duplicate of this bug. ***