bgo#745177 - Revert "RsvgPathBuilder: don't add a terminating moveto after closepath"

This reverts commit 0c98142e31cdc91963860f99ec933e52f3cc63c6.

This was causing bug https://bugzilla.gnome.org/show_bug.cgi?id=745177