rsvg-path.h
@@ -34,6 +34,7 @@ G_BEGIN_DECLS
 
 typedef struct {
     GArray *path_data;
+    int     last_move_to_index;
 } RsvgPathBuilder;
 
 G_GNUC_INTERNAL
